# sbitx-n8me

./: .gitignore  CMakeLists.txt  StartupSequence.txt  build  chrony.conf  command_str.c  command_str.h  config.txt  draw_dial.c  draw_dial.h  drawing.c  drawing.h  fft_filter.c  fields.c  fields.h  fonts.c  fonts.h  functions_sbitx_gtk.txt  hamlib.c  help_text.c  i2cbb.c  i2cbb.h  logbook.c  macros.c  modem_ft8.c  modems.c  panafall.c  panafall.h  queue.c  remote.c  sBitx.desktop  sbitx  sbitx-n8me notes.txt  sbitx-n8me.code-workspace  sbitx.c  sbitx_gtk.c  sbitx_sound.c  sdr.h  sdr_ui.h  setGPIO.py  (+3 more)
data/: sbitx.db
ft8_lib/: decode_ft82.c
